# dlt_crash_course

./: .gitignore  README.md  pyproject.toml
lessons/1_lesson/: main.py
lessons/2_lesson/: github_example.py  resource.py  transformer.py
lessons/3_lesson/: main.py
lessons/4_lesson/: database_example.py  filesystem_example.py  filesystem_excercise_3.py  rest_api_excercise_2.py  rest_api_pipeline.py  sql_database_pipeline.py
lessons/5_lesson/: excercise_1.py  incremantle_example.py  merge_example.py
lessons/6_lesson/: inspect_schema.py
lessons/7_lesson/: excercise.py
