[tool.poetry]
name = "dlt-crash-course"
version = "0.1.0"
description = "[\"just a dlt crash course!\""
authors = ["Yannik Sacherer <ysacherer@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.7"
dlt = {extras = ["parquet", "duckdb"], version = "^1.5.0"}
numpy = "^2.2.1"
pandas = "^2.2.3"
pymysql = "^1.1.1"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
